Update and rename Home.htm to index.html

--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@
                     
                     
                 <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank" class="">
+                        <a href="https://twitter.com/Trinculo541" target="_blank" class="">
                             <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank" class="">
+                        <a href="https://www.facebook.com/Trinculo54-108290317631630" target="_blank" class="">
                             <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.youtube.com/c/mobirise" target="_blank" class="">
+                        <a href="https://www.youtube.com/channel/UCgoZrvr6ZrQallAQbkdsSbw" target="_blank" class="">
                             <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://instagram.com/mobirise" target="_blank" class="">
+                        <a href="https://instagram.com/Trinculo541" target="_blank" class="">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
                         </a>
                     </div></div>
