--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/b" style="flex: 1 1; height: 3rem; padding-left: 1rem;" class="hidden animate__animated animate__delay-1s"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;" class="hidden animate__animated animate__delay-1s">Develop a free <a href="https://mobirise.site/y" style="color:#aaa;">web page</a> with Mobirise</p></section><script src="Home_files/jquery.js"></script>  <script src="Home_files/popper.js"></script>  <script src="Home_files/tether.js"></script>  <script src="Home_files/bootstrap.js"></script>  <script src="Home_files/smooth-scroll.js"></script>  <script src="Home_files/jarallax.js"></script>  <script src="Home_files/jquery_002.js"></script>  <script src="Home_files/script.js"></script>  
+</section><script src="Home_files/jquery.js"></script>  <script src="Home_files/popper.js"></script>  <script src="Home_files/tether.js"></script>  <script src="Home_files/bootstrap.js"></script>  <script src="Home_files/smooth-scroll.js"></script>  <script src="Home_files/jarallax.js"></script>  <script src="Home_files/jquery_002.js"></script>  <script src="Home_files/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up" style="display: none;"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
