--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="Home_files/osd.js"></script><script src="Home_files/show_ads_impl_fy2019.js" id="google_shimpl"></script><script data-ad-client="ca-pub-3165327043574963" async="" src="Home_files/adsbygoogle.js" data-checked-head="true"></script>
   
   
-  <title>Home</title>
+  <title>Among Us Page</title>
   <link rel="stylesheet" href="Home_files/tether.css">
   <link rel="stylesheet" href="Home_files/bootstrap.css">
   <link rel="stylesheet" href="Home_files/bootstrap-grid.css">
