--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="https://adoring-saha-efb642.netlify.app/assets/images/logo5.png" type="image/x-icon">
   <meta name="description" content="">
   <script src="Home_files/osd.js"></script><script src="Home_files/show_ads_impl_fy2019.js" id="google_shimpl"></script><script data-ad-client="ca-pub-3165327043574963" async="" src="Home_files/adsbygoogle.js" data-checked-head="true"></script>
-  
+  <script src="https://kit.fontawesome.com/97b8ba7268.js" crossorigin="anonymous"></script>
   
   <title>Among Us Page</title>
   <link rel="stylesheet" href="Home_files/tether.css">
