--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     
                 <div class="soc-item">
                         <a href="https://twitter.com/Trinculo541" target="_blank" class="">
-                            <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <i class="fab fa-twitter"></i>
                         </a>
                     </div><div class="soc-item">
                         <a href="https://www.facebook.com/Trinculo54-108290317631630" target="_blank" class="">
