--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
                         </a>
                     </div><div class="soc-item">
                         <a href="https://www.facebook.com/Trinculo54-108290317631630" target="_blank" class="">
-                            <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <i class="fab fa-facebook-f"></i>
                         </a>
                     </div><div class="soc-item">
                         <a href="https://www.youtube.com/channel/UCgoZrvr6ZrQallAQbkdsSbw" target="_blank" class="">
-                            <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <i class="fab fa-youtube"></i>
                         </a>
                     </div><div class="soc-item">
                         <a href="https://instagram.com/Trinculo541" target="_blank" class="">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
+                            <i class="fab fa-instagram"></i>
                         </a>
                     </div></div>
             </div>
