--- a/index.html
+++ b/index.html
@@ -140,19 +140,27 @@
                     
                 <div class="soc-item">
                         <a href="https://twitter.com/Trinculo541" target="_blank" class="">
+                          <span style="color: White;">
                             <i class="fab fa-twitter"></i>
+                          </span>
                         </a>
                     </div><div class="soc-item">
                         <a href="https://www.facebook.com/Trinculo54-108290317631630" target="_blank" class="">
+                          <span style="color: White;">
                             <i class="fab fa-facebook-f"></i>
+                          </span>
                         </a>
                     </div><div class="soc-item">
                         <a href="https://www.youtube.com/channel/UCgoZrvr6ZrQallAQbkdsSbw" target="_blank" class="">
+                          <span style="color: White;">
                             <i class="fab fa-youtube"></i>
+                          </span>
                         </a>
                     </div><div class="soc-item">
                         <a href="https://instagram.com/Trinculo541" target="_blank" class="">
+                          <span style="color: White;">
                             <i class="fab fa-instagram"></i>
+                          </span>
                         </a>
                     </div></div>
             </div>
