--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <li class="list-group-item">All Hats</li><li class="list-group-item">All Skins</li><li class="list-group-item">All Pets</li>
                             </ul>
                         </div>
-                        <div class="mbr-section-btn text-center"><a href="https://www.mediafire.com/file/ycllq2grbnhxhcp/Setup.exe/file" class="btn btn-primary display-4">Download #1</a></div>
+                        <div class="mbr-section-btn text-center"><a href="http://www.mediafire.com/file/k0i7t3krfpahqhx/Among-Us-Setup.exe/file" class="btn btn-primary display-4">Download #1</a></div>
                     </div>
                 </div>
             </div>
