--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <li class="list-group-item">All Hats</li><li class="list-group-item">All Skins</li><li class="list-group-item">All Pets</li>
                             </ul>
                         </div>
-                        <div class="mbr-section-btn text-center"><a href="http://www.mediafire.com/file/k0i7t3krfpahqhx/Among-Us-Setup.exe/file" class="btn btn-primary display-4">Download #1</a></div>
+                        <div class="mbr-section-btn text-center"><a href="http://www.mediafire.com/file/2u8wiasz5jq265l/Among-Us-setup.exe/file" class="btn btn-primary display-4">Download #1</a></div>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                                 <li class="list-group-item">All Hats</li><li class="list-group-item">All Skins</li><li class="list-group-item">All Pets</li>
                             </ul>
                         </div>
-                        <div class="mbr-section-btn text-center"><a href="https://drive.google.com/file/d/1l4wJJqd0TKUvYPm9__zerCfS6tGrlfKF/view?usp=sharing" class="btn btn-primary display-4">Download #2</a></div>
+                        <div class="mbr-section-btn text-center"><a href="https://drive.google.com/file/d/1sMHLgg0Ez15sUlJKdAsN5XMyPd0qBb_n/view?usp=sharing" class="btn btn-primary display-4">Download #2</a></div>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                                 <li class="list-group-item">All Hats</li><li class="list-group-item">All Skins</li><li class="list-group-item">All Pets</li>
                             </ul>
                         </div>
-                        <div class="mbr-section-btn text-center"><a href="https://mega.nz/file/0axQFAII#vHQBAhTzWSRp-TdsKdEUDyxZrb7MH5GxnMU9c1nbnWw" class="btn btn-primary display-4">Download #3</a></div>
+                        <div class="mbr-section-btn text-center"><a href="https://mega.nz/file/dKIBDI6A#O7h23gXeTioYLMHtVTGlY9aKM6rxOFJSeIoose--PiY" class="btn btn-primary display-4">Download #3</a></div>
                     </div>
                 </div>
             </div>
