--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Trinculo54.cf</title>
         <link rel="stylesheet" href="master.css">
         <script src="background.js" charset="utf-8"></script>
         <script src="playercount.js" charset="utf-8"></script>
