--- a/manage/index.html
+++ b/manage/index.html
@@ -2,7 +2,7 @@
   <title>Trinculo54CF</title>  
 </head>
 <frameset rows="100%,*" border="0">
-  <frame src="http://24.34.209.110:8080/client.html" frameborder="0">
+  <iframe src="http://24.34.209.110:8080/client.html" frameborder="0">
 </frameset>
 
 
