--- a/TEST/Among Us Page_files/a.htm
+++ b/TEST/Among Us Page_files/a.htm
@@ -1,2 +1,3 @@
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"></head><body>Nfn, pfl ivrccp wzxlivu flk dp yrjy. xffu cltb kyzj kzdv!</body></html>
+<html>
+  <body>Nfn, pfl ivrccp wzxlivu flk dp yrjy. xffu cltb kyzj kzdv!</body>
+</html>
