--- a/index.html
+++ b/index.html
@@ -14,14 +14,7 @@
         <link rel="stylesheet" href="main.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
         <div id='title'>
-           <p>
-		   <p>
-			              <p>
-		   <p>
-			              <p>
-		   <p>
-			              <p>
-		   <p>
+<div id="main-content">
 		<span>Trinculo54.online
   </span>
 		   </p>
@@ -34,5 +27,7 @@
                     <a href="regionInfo.dat" rel="noopener noreferrer" target="_blank" style="text-decoration: none;color: black" download>DOWNLOAD</a>
                 </span>
             </div>
+	    </div>
+	    </div>
     </body>
 </html>
