--- a/index.html
+++ b/index.html
@@ -162,5 +162,28 @@ h5 {
         </div>
     </div>
 </div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyDJgb0C_PmDZ0F3dxxoKkaWpon-G9yZltc",
+    authDomain: "calm-axis-298713.firebaseapp.com",
+    projectId: "calm-axis-298713",
+    storageBucket: "calm-axis-298713.appspot.com",
+    messagingSenderId: "630693896861",
+    appId: "1:630693896861:web:9343b3b8083446745a6a74",
+    measurementId: "G-M51E8BYDZJ"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 </body>
 </html>
