--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+<meta name="description" content="Testing for discord">
     <script type="text/javascript">
       window.location.href = "https://discord.gg/8kbFqvefVY";
     </script>
