--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
 <meta name="description" content="Testing for discord">
-    <script type="text/javascript">
+    <meta content="Embed Title" property="og:title">
+  <meta content="Site Description" property="og:description">
+    <meta content="https://embed.com/this-is-the-site-url" property="og:url">
+    <meta content="https://embed.com/embedimage.png" property="og:image">
+    <meta content="#43B581" data-react-helmet="true" name="theme-color">
+<script type="text/javascript">
       window.location.href = "https://discord.gg/8kbFqvefVY";
     </script>
   </head>
