--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
 <meta name="description" content="Testing for discord">
-    <meta content="Embed Title" property="og:title">
-  <meta content="Site Description" property="og:description">
-    <meta content="https://embed.com/this-is-the-site-url" property="og:url">
+    <meta content="Arastotska" property="og:title">
+  <meta content="Home away from home" property="og:description">
+    <meta content="https://discord.gg/8kbFqvefVY" property="og:url">
     <meta content="https://embed.com/embedimage.png" property="og:image">
-    <meta content="#43B581" data-react-helmet="true" name="theme-color">
+    <meta content="#960dff" data-react-helmet="true" name="theme-color">
 <script type="text/javascript">
       window.location.href = "https://discord.gg/8kbFqvefVY";
     </script>
