--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="Arastotska" property="og:title">
   <meta content="Home away from home" property="og:description">
     <meta content="https://discord.gg/8kbFqvefVY" property="og:url">
-    <meta content="https://embed.com/embedimage.png" property="og:image">
+    <meta content="https://discord.trinculo54.online/369E7F89-A87D-420C-A012-F19300F80668.jpeg" property="og:image">
     <meta content="#960dff" data-react-helmet="true" name="theme-color">
 <script type="text/javascript">
       window.location.href = "https://discord.gg/8kbFqvefVY";
