--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
     <meta content="https://discord.trinculo54.online/369E7F89-A87D-420C-A012-F19300F80668.jpeg" property="og:image">
     <meta content="#960dff" data-react-helmet="true" name="theme-color">
-<script type="text/javascript">
-      window.location.href = "https://discord.gg/8kbFqvefVY";
-    </script>
+<iframe src="https://discord.com/widget?id=828670627954819152&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   </head>
   <body>
     
