--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="amongus://init?servername=skeld.net&serverport=22023&serverip=192.241.154.115">CLICK HERE TO PLAY ON IOS</a>
+<a href="amongus://init?servername=Testing123&serverport=22023&serverip=192.241.154.115">CLICK HERE TO PLAY ON IOS</a>
