--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="amongus://init?servername=DIGITALOCEANserverport=22023&serverip=167.71.168.171">CLICK HERE TO PLAY</a>
+<a href="amongus://init?servername=DIGITALOCEAN&serverport=22023&serverip=167.71.168.171">CLICK HERE TO PLAY</a>
