--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<a href="amongus://init?servername=Trinculo54.online&serverport=22023&serverip=167.71.168.171">CLICK HERE TO PLAY ON IOS</a>
+<header>
+  <div class="overlay"></div>
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+    <source src="Among us background space star.mp4" type="video/mp4">
+  </video>
+  <div class="container h-100">
+    <div class="d-flex h-100 text-center align-items-center">
+      <div class="w-100 text-white">
+        <a href="amongus://init?servername=Trinculo54.online&serverport=22023&serverip=167.71.168.171">CLICK HERE TO PLAY ON IOS</a>
+      </div>
+    </div>
+  </div>
+</header>
