--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<header>
-  <div class="overlay"></div>
-  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-    <source src="Among us background space star.mp4" type="video/mp4">
-  </video>
-  <div class="container h-100">
-    <div class="d-flex h-100 text-center align-items-center">
-      <div class="w-100 text-white">
-        <a href="amongus://init?servername=Trinculo54.online&serverport=22023&serverip=167.71.168.171">CLICK HERE TO PLAY ON IOS</a>
-      </div>
-    </div>
-  </div>
-</header>
+<h1 class="text-light">Pure CSS Animated Gradient Background</h1>
+
+<link href="main.css" rel="stylesheet">
+
+<div class="btn-group mt-2 mb-4" role="group" aria-label="actionButtons">
+	<a href="amongus://init?servername=Trinculo54.online&serverport=22023&serverip=167.71.168.171" class="d-block btn btn-outline-light"><i class="fas fa-file-download mr-2"></i>Server for iOS</a>
+	<a href="https://manuelpinto.in" target="_blank" class="d-block btn btn-outline-light">Visit my Website<i class="fas fa-external-link-square-alt ml-2"></i></a>
+</div>
+
+<h6 class="text-light small font-weight-bold"><i class="fas fa-code"></i> with <i class="fas fa-heart"></i> by Manuel Pinto</h6>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" integrity="sha256-qM7QTJSlvtPSxVRjVWNM2OfTAz/3k5ovHOKmKXuYMO4=" crossorigin="anonymous"></script>
