--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
-<h1 class="text-light">Pure CSS Animated Gradient Background</h1>
-
-<link href="main.css" rel="stylesheet">
-
-<div class="btn-group mt-2 mb-4" role="group" aria-label="actionButtons">
-	<a href="amongus://init?servername=Trinculo54.online&serverport=22023&serverip=167.71.168.171" class="d-block btn btn-outline-light"><i class="fas fa-file-download mr-2"></i>Server for iOS</a>
-	<a href="https://manuelpinto.in" target="_blank" class="d-block btn btn-outline-light">Visit my Website<i class="fas fa-external-link-square-alt ml-2"></i></a>
+<!DOCTYPE html>
+<html lang="en" >
+  <meta charset="UTF-8">
+  <title>CodePen - Calm breeze login screen</title>
+  <link rel="stylesheet" href="./style.css">
+<head>
+<!-- partial:index.partial.html -->
+<div class="wrapper">
+	<div class="container">
+		<h1>Welcome</h1>
+		
+		<form class="form">
+			<input value="PC" type="submit">
+			<input href="https://google.com" value="iOS "type="submit">
+			<input value="Android" type="submit">
+		</form>
+	</div>
+	
+	<ul class="bg-bubbles">
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ul>
 </div>
-
-<h6 class="text-light small font-weight-bold"><i class="fas fa-code"></i> with <i class="fas fa-heart"></i> by Manuel Pinto</h6>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" integrity="sha256-qM7QTJSlvtPSxVRjVWNM2OfTAz/3k5ovHOKmKXuYMO4=" crossorigin="anonymous"></script>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
+</head>
+</html>
