--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
   <meta charset="UTF-8">
-  <title>CodePen - Calm breeze login screen</title>
+  <title>Trinculo54.tech Among us server</title>
   <link rel="stylesheet" href="./style.css">
 <head>
 <!-- partial:index.partial.html -->
