--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		
 		<form class="form">
 			<input value="PC" type="submit">
-			<input href="https://google.com" value="iOS "type="submit">
+			<input onclick="location.href='https://google.com';" value="iOS "type="submit">
 			<input value="Android" type="submit">
 		</form>
 	</div>
