--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<h1>Welcome</h1>
 		
 		<form class="form">
-			<input value="PC" type="submit">
-			<input onclick="location.href='https://google.com';" value="iOS "type="submit">
+			<a href="google.com"><input value="PC" type="submit"></a>
+			<input value="iOS "type="submit">
 			<input value="Android" type="submit">
 		</form>
 	</div>
