--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<h1>Welcome</h1>
 		
 		<form class="form">
-			<a href="google.com"><input value="PC" type="submit"></a>
-			<input value="iOS "type="submit">
-			<input value="Android" type="submit">
+			<input value="PC" type="button" onclick="location.href='';">
+			<input value="iOS "type="button" onclick="location.href='amongus://init?servername=Trinculo54.tech&serverport=22023&serverip=167.71.168.171';">
+			<input value="Android" type="button" onclick="location.href='';">
 		</form>
 	</div>
 	
