--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<h1>Welcome</h1>
 		
 		<form class="form">
-			<input value="PC" type="button" onclick="location.href='';">
+			<input value="PC" type="button" onclick="location.href='pc.html';">
 			<input value="iOS "type="button" onclick="location.href='amongus://init?servername=Trinculo54.tech&serverport=22023&serverip=167.71.168.171';">
-			<input value="Android" type="button" onclick="location.href='';">
+			<input value="Android" type="button" onclick="location.href='android.html';">
 		</form>
 	</div>
 	
