--- a/android.html
+++ b/android.html
@@ -7,11 +7,11 @@
 <!-- partial:index.partial.html -->
 <div class="wrapper">
 	<div class="container">
-		<h1>Welcome</h1>
 		
 		<form class="form">
-			<input value="How to join" type="button">
-      <input value="To play on a private server, type the server IP and overwrite the regionInfo.json file in Internal Storage/Android/data/com.innersloth.spacemafia/files" type="button">
+			      <div>
+        <h1>How to join</h1>
+      <h2>To play on a private server, type the server IP and overwrite the regionInfo.json file in Internal Storage/Android/data/com.innersloth.spacemafia/files</h2>
       <input value="Download" type="button" onclick="location.href='./regionInfo.json';">
 		</form>
 	</div>
