--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
   <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Among Us Server</title>
   <link rel="stylesheet" href="./style.css">
 <head>
@@ -11,7 +12,9 @@
 		
 		<form class="form">
 			<input value="PC" type="button" onclick="location.href='pc.html';">
+			</br>
 			<input value="iOS "type="button" onclick="location.href='amongus://init?servername=Trinculo54.tech&serverport=22023&serverip=167.71.168.171';">
+			</br>
 			<input value="Android" type="button" onclick="location.href='android.html';">
 		</form>
 	</div>
