--- a/android.html
+++ b/android.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <title>Among Us Server</title>
   <link rel="stylesheet" href="./style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 <!-- partial:index.partial.html -->
 <div class="wrapper">
@@ -12,6 +13,7 @@
 			      <div>
         <h1>How to join</h1>
       <h2>To play on a private server, type the server IP and overwrite the regionInfo.json file in Internal Storage/Android/data/com.innersloth.spacemafia/files</h2>
+      </br>
       <input value="Download" type="button" onclick="location.href='./regionInfo.json';">
 		</form>
 	</div>
