--- a/pc.html
+++ b/pc.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <title>Among Us Server</title>
   <link rel="stylesheet" href="./style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 <!-- partial:index.partial.html -->
 <div class="wrapper">
@@ -11,10 +12,12 @@
 		<form class="form">
       <div>
         <h1>How to join</h1>
+	      </br>
         <h2>Download the file from below and press Win + R</h2>
         <h2>type: "%APPDATA%\..\LocalLow\Innersloth\Among Us"</h2>
-        <h2>drag the downloaded file into the folder and voalia</h2>
+        <h2>drag the downloaded file into the folder</h2>
       </div>
+		</br>
        <input value="Download" type="button" onclick="location.href='./regionInfo.json';">
 		</form>
 	</div>
