--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 		<form class="form">
 			<input value="PC" type="button" onclick="location.href='pc.html';">
 			</br>
-			<input value="iOS "type="button" onclick="location.href='amongus://init?servername=Trinculo54.tech&serverport=22023&serverip=64.225.59.67';">
-			</br>
-			<input value="Android" type="button" onclick="location.href='android.html';">
+			<input value="Mobile" "type="button" onclick="location.href='amongus://init?servername=Trinculo54.tech&serverport=22023&serverip=64.225.59.67';">
 		</form>
 	</div>
 	
